Center text, fix overflow for flush left/right

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,16 @@
   font-size: 2vh;
 }
 
+.font-white {
+  color: white;
+}
+
 .main-text {
   font-size: 8vh;
   color: white;
   font-family: 'True Crimes', sans-serif;
 }
+
 
 /* Slideshow container */
 .carousel {
@@ -37,15 +42,6 @@
   margin: auto;
   }
 
-  @media handheld {
-    .carousel-image {
-      max-width:80%;
-      max-height:80%;
-      width: 80%;
-      height: 80%;
-    }
-  }
-
 @-webkit-keyframes fadeinout {
   0%,100% { opacity: 0; }
   15%, 85% { opacity: 1; }
@@ -54,17 +50,6 @@
 @keyframes fadeinout {
   0%,100% { opacity: 0; }
   15%, 85% { opacity: 1; }
-}
-
-#btn-start {
-  background-color: white;
-  border: 5px solid;
-  border-color: black;
-  width: 20%;
-  height: 20%;
-  color: black;
-  margin: 10px;
-  font-size: 3vh;
 }
 
 body {
@@ -84,13 +69,14 @@ body {
   background-color: white;
   border-radius: 5px;
   padding: 10px;
+  padding-bottom: 0;
   box-shadow: 0 0 10px 2px;
 }
 
 .btn-grid {
   display: grid;
   gap: 10px;
-  margin-top: 20px;
+  margin-top: 5px;
 } 
 
 .btn-grid-1 {
@@ -106,7 +92,9 @@ body {
   border: 1px solid hsl(var(--hue), 100%, 30%);
   background-color: hsl(var(--hue), 100%, 50%);
   border-radius: 5px;
-  padding: 70px 20px;
+  padding: 20px 20px;
+  min-height: 120px;
+  height: 80%;
   color: white;
   outline: none;
 }
@@ -118,6 +106,7 @@ body {
 .btn.correct {
   --hue: var(--hue-correct);
   color: black;
+  min-height: 150px;
 }
 
 .btn.wrong {
@@ -125,10 +114,16 @@ body {
 }
 
 .next-btn {
-  font-size: 1.5rem;
   font-weight: bold;
   padding: 10px 20px;
   color: black;
+  background-color: white;
+  border: 5px solid;
+  border-color: black;
+  min-width: 20%;
+  max-height: 20%;
+  margin: 10px;
+  font-size: 3vh;
 }
 
 .controls {
@@ -183,16 +178,35 @@ body {
   text-align: center;
 }
 
-.flush-left {
-  float: left;
-}
-
-.flush-right {
-  float: right;
-}
 
 #question {
   font-size: 3vh;
   color: white;
   font-family: 'True Crimes', sans-serif;
+  margin: 5px;
+  margin-bottom: 10px;
+}
+
+.top-align{
+  vertical-align: top
+}
+
+.flush-left {
+  float: left;
+  padding-bottom: -2px;
+}
+
+.flush-right {
+  float: right;
+  padding-bottom: -2px;
+}
+
+.clearfix {
+  overflow: auto;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
